# skeletor

./: .gitignore  100k.yml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  install.sh  meta.md  release.sh  release.toml  skeletor.rb  sonar-project.properties  update-homebrew.sh
.github/: copilot-instructions.md
.github/workflows/: CI.yml  package.yml  release.yml  tap-update.yml  update-homebrew.yml
Formula/: skeletor.rb
_ops/: README.md  test-config.yml  verbose-test.yml
docs/: README.md
examples/: hello.rs  library_demo.rs
npm/skeletor/: package.json
scripts/: check-npm-versions.sh  check-version-consistency.sh  pre-commit.sh  setup-git-hooks.sh
src/: apply.rs  config.rs  errors.rs  info.rs  lib.rs  main.rs  output.rs  snapshot.rs  tasks.rs  test_utils.rs  utils.rs
src/snapshot/: ignore.rs
tests/: integration_test.rs  lib_api_tests.rs
