[package]
name = "skeletor"
version = "2.2.21"
authors = ["Jason Joseph Nathan <jjnathanjr@gmail.com>"]
edition = "2021"
description = "A super optimized Rust scaffolding tool."
license = "MIT"
repository = "https://github.com/jasonnathan/skeletor"
homepage = "https://github.com/jasonnathan/skeletor"
documentation = "https://docs.rs/skeletor"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "scaffolding", "codegen", "automation", "rust"]

[dependencies]
chrono = "0.4.39"
clap = {version = "4.5.20", features = ["derive"]}
env_logger = "0.11.5"
globset = "0.4.15"
log = "0.4.22"
serde_yaml = "0.9.34"
thiserror = "1.0.64"

[dev-dependencies]
tempfile = "3.13.0"

