[package]
name = "skeletor"
version = "0.3.0"
authors = ["Jason Joseph Nathan <jjnathanjr@gmail.com>"]
edition = "2021"
rust-version = "1.70"  # MSRV - Minimum Supported Rust Version
description = "A blazing-fast Rust scaffolding tool with YAML-driven snapshots."
license = "MIT"
repository = "https://github.com/thegeekist/skeletor"
homepage = "https://github.com/thegeekist/skeletor"
documentation = "https://docs.rs/skeletor"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "scaffolding", "codegen", "automation", "rust"]

[dependencies]
chrono = "0.4.39"
clap = {version = "4.5.20", features = ["derive"]}
env_logger = "0.11.5"
globset = "0.4.15"
log = "0.4.22"
serde_yaml = "0.9.34"
thiserror = "1.0.64"
termcolor = "1.4.1"  # For colored terminal output

[dev-dependencies]
tempfile = "3.13.0"

[[bin]]
name = "skeletor"
path = "src/main.rs"

[lib]
name = "skeletor"
path = "src/lib.rs"

[[example]]
name = "library_demo"
path = "examples/library_demo.rs"

